--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "dicebear": "^9.2.3",
     "dotenv": "^17.0.0",
     "drizzle-orm": "^0.44.2",
