--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-table": "^8.21.3",
     "@trpc/client": "^11.4.3",
     "@trpc/server": "^11.4.3",
     "@trpc/tanstack-react-query": "^11.4.3",
@@ -34,6 +35,7 @@
     "dotenv": "^17.0.0",
     "drizzle-orm": "^0.44.2",
     "lucide-react": "^0.525.0",
+    "nanoid": "^5.1.5",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
